# QuantStack

./: .dockerignore  .env.example  .gitignore  404.html  README.md  docker-compose.yml  index.html  mkdocs.yml  sitemap.xml  sys.md
.claude/commands/: volume-build.md  volume-postflight.md  volume-preflight.md  volume-seam-check.md
.github/workflows/: backend-tests.yml  ci.yml  deploy-docs.yml
architecture/: index.html
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_market_data_tables.py  0003_feature_store.py  0004_hot_path_indexes.py  0005_distinct_on_index.py  0006_feature_usage_symbol_scope.py  0007_model_registry.py  0008_feature_row_metadata.py  0009_dataset_registry.py
backend/app/: main.py
backend/app/api/: collectors.py  dashboard.py  features.py  health.py  intelligence.py  prediction.py
backend/app/collectors/: base.py  market_data.py  pipeline.py  quality.py  registry.py  schema.py  tick_aggregator.py
backend/app/collectors/domains/: breadth.py  delivery.py  events.py  flows.py  macro.py  news.py  options.py  retention.py  sector.py
backend/app/collectors/sources/: broker_sectors.py  bse_candles.py  bse_options.py  candle_aggregate.py  finbert_sentiment.py  global_news.py  nse_breadth.py  nse_candles.py  nse_client.py  nse_delivery.py  nse_events.py  nse_flows.py  nse_options.py  routing.py  rss_news.py  yahoo_history.py  yahoo_macro.py
backend/app/core/: alerts.py  cache.py  circuit_breaker.py  config.py  container.py  logging.py  system_metrics.py
backend/app/database/: session.py  tables.py
backend/app/events/: bus.py
backend/app/features/: base.py  breadth.py  drift.py  events.py  institutional_flow.py  intraday_risk.py  liquidity.py  macro.py  news.py  normalize.py  options.py  price.py  quality.py  registry.py  relative.py  replay.py  risk.py  schema.py  sector.py  selection.py  snapshots.py  stats.py  store.py  structure.py  timefeat.py  volatility.py  volume.py
backend/app/intelligence/: analogs.py  base.py  breadth.py  composite.py  confidence.py  correlation.py  events.py  explain.py  institutional_flow.py  liquidity.py  macro.py  momentum.py  options.py  regime.py  relative.py  report.py  sector.py  structure.py  transitions.py  trend.py  volatility.py
backend/app/market/: angel_one.py  angel_ws.py  black_scholes.py  broker.py  instruments.py
backend/app/prediction/: agreement.py  alpha_research.py  calibration.py  candidates.py  conviction.py  duplicate.py  ensemble.py  explainability.py  historical_similarity.py  labeling.py  lifecycle.py  market_context.py  multi_horizon.py  opportunity.py  priority.py  qualification.py  snapshot.py
backend/app/scheduler/: jobs.py  service.py
backend/app/static/: candle_check.html  intelligence_dashboard.html  sensex_dashboard.html
backend/app/telegram/: sink.py
backend/app/tests/: conftest.py  market_scenarios.py  test_alerts.py  test_alpha_research.py  test_angel_one_adapter.py  test_angel_ws.py  test_bayesian_regime_detection.py  test_black_scholes.py  test_breadth_collector.py  test_breadth_feature_engine.py  test_breadth_intelligence.py  test_broker_sectors_fallback.py  test_bse_candles.py  test_bse_options_source.py  test_cache.py  test_candidate_generation.py  test_candle_aggregate.py  test_candle_retention.py  test_circuit_breaker.py  test_collector_framework.py  test_composite_market_intelligence.py  test_config.py  test_container.py  test_conviction.py  test_correlation_intelligence.py  test_cross_layer_integration.py  test_dashboard_api.py  test_database_session.py  test_db_fixture_smoke.py  test_db_persistence.py  test_delivery_collector.py  test_duplicate_signal.py  test_ensemble_nonblocking.py  test_ensemble_prediction.py  test_event_bus.py  test_event_intelligence.py  test_event_risk_engine.py  test_events_collector.py  test_explainability.py  test_explainability_report.py  (+82 more)
backlog/: index.html
configs/: default.yaml  event_calendar.yaml
docker/: Dockerfile.backend
docs/: architecture.md  backlog.md  glossary.md  implementation-guide.md  index.md  roadmap.md
docs/overview/: architecture-review.md  master-blueprint.md
docs/volumes/: data-foundation-audit-2026-07-17.md  design-feature-store-gaps-2026-07-17.md  postflight-vol1-2026-07-15.md  postflight-vol3-2026-07-16.md  postflight-vol4-2026-07-16.md  preflight-data-foundation-2026-07-17.md  preflight-vol2-2026-07-15.md  preflight-vol3-2026-07-15.md  preflight-vol3-2026-07-16.md  preflight-vol4-2026-07-16.md  preflight-vol5-2026-07-16.md  volume-1.md  volume-10.md  volume-2.md  volume-3.md  volume-4.md  volume-5-5.md  volume-5-75.md  volume-5-9.md  volume-5-95.md  volume-5-99.md  volume-5-999.md  volume-5.md  volume-6-1.md  volume-6-5.md  volume-6.md  volume-7.md  volume-8.md  volume-9.md
glossary/: index.html
implementation-guide/: index.html
overview/architecture-review/: index.html
overview/master-blueprint/: index.html
prompts/: 1-preflight.md  2-build.md  3-seam-check.md  4-postflight.md  DEBT.md  INVARIANTS.md  README.md  VERIFY-COOKBOOK.md
roadmap/: index.html
scripts/: start-backend.sh
search/: search_index.json
volumes/volume-1/: index.html
volumes/volume-10/: index.html
volumes/volume-2/: index.html
volumes/volume-3/: index.html
volumes/volume-4/: index.html
volumes/volume-5/: index.html
volumes/volume-5-5/: index.html
volumes/volume-5-75/: index.html
volumes/volume-5-9/: index.html
volumes/volume-5-95/: index.html
volumes/volume-5-99/: index.html
volumes/volume-5-999/: index.html
volumes/volume-6-1/: index.html
volumes/volume-6-5/: index.html
(+4 files in other folders)
