[project]
name = "quantstack-backend"
version = "0.1.0"
description = "QuantStack — institutional-grade AI trading signal platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings[yaml]>=2.3",
    "redis>=5.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "pyotp>=2.9",
    "websockets>=12.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "fakeredis>=2.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
# type-abstract: registering interfaces (ABCs) as DI container keys is intentional.
# import-untyped: apscheduler 3.x ships no py.typed marker.
disable_error_code = ["type-abstract", "import-untyped"]
