[project]
name = "quantstack-backend"
version = "0.1.0"
description = "QuantStack — institutional-grade AI trading signal platform (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings[yaml]>=2.3",
    "redis>=5.0",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "certifi>=2024.2.2",
    "pyyaml>=6.0",
    "pyotp>=2.9",
    "websockets>=12.0",
    "psutil>=5.9",
    # FinBERT news sentiment (Settings.news_sentiment_provider). CPU inference;
    # install the CPU-only wheel to avoid pulling CUDA packages on Windows:
    #   pip install torch --index-url https://download.pytorch.org/whl/cpu
    "transformers>=4.40",
    "torch>=2.2",
    # Ensemble Prediction Engine (app/prediction/ensemble.py) baseline trio:
    # Random Forest, Extra Trees, Logistic Regression.
    "scikit-learn>=1.4",
    "numpy>=1.26",
    # Feature Store offline archival sink (app/features/store.py._write_parquet,
    # Volume 3 Chapter 4's "Parquet, PostgreSQL" pair). Postgres remains the
    # sole read path; this is a best-effort export destination only.
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "fakeredis>=2.23",
]
# Optional gradient-boosting members of the Ensemble Prediction Engine.
# If not installed, that model is skipped from the ensemble (a graceful
# degrade, not a crash) -- same pattern as Redis outages / FinBERT fallback
# elsewhere in this codebase:
#   pip install lightgbm xgboost catboost
ensemble = [
    "lightgbm>=4.0",
    "xgboost>=2.0",
    "catboost>=1.2",
]
# Real SHAP values for the Explainability Report (app/prediction/explainability.py,
# Prompt 5.16). If not installed, Top SHAP Features falls back to
# ensemble.py's own feature-importance proxy explanation:
#   pip install shap
explainability = [
    "shap>=0.45",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
markers = [
    "db: needs a real Postgres (spun up via docker by the postgres_test_url fixture)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*"]
branch = true

[tool.coverage.report]
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
check_untyped_defs = true
# type-abstract: registering interfaces (ABCs) as DI container keys is intentional.
# import-untyped: apscheduler 3.x ships no py.typed marker.
disable_error_code = ["type-abstract", "import-untyped"]
